# stonkinator

./: .dockerignore  .gitignore  Dockerfile.data_frame_service  Dockerfile.rpc_service  Dockerfile.stonkinator  compile_proto.sh  create_certs.sh  docker-compose.yml  dump_db.sh  env_template  start.sh
alphascrape/: package-lock.json  package.json
data_frame_service/: .dockerignore  Cargo.toml  build.rs  pyproject.toml
data_frame_service/examples/: README.md  flight_client.rs  grpc_client.rs
data_frame_service/src/: blueprint.rs  command.rs  feature_expression.rs  flight_service.rs  grpc_service.rs  lib.rs  main.rs
db/: stonkinator.sql
live_systems/: mean_reversion_stocks.py
protobufs/: data_frame_service.proto  general_messages.proto  securities_service.proto  trading_systems_service.proto
rpc_service/: compile_proto.sh  stonkinator.proto
securities_pg_db/: daily_data_gather.sh
server/: Dockerfile
stonkinator/: Dockerfile  Dockerfile.rpc_service  Dockerfile.stonkinator  compile_proto.sh  crontab  run.sh  stonkinator.proto
stonkinator_api/: .dockerignore  Dockerfile  exchange.go  go.mod  go.sum  instrument.go  main.go  mdb_client.go  package-lock.json  package.json  pg_client.go  price.go  routes.go  trading_system.go  user.go
stonkinator_api_go/: Dockerfile  exchange.go  go.mod  go.sum  instrument.go  main.go  mdb_client.go  pg_client.go  price.go  routes.go  trading_system.go
stonkinator_frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
systemoasen/: crs_ma_system.py  kallops_trading.py  mester.py  ppcwap.py  (+2 more)
(+215 files in other folders)
