[package]
name = "data_frame_service"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
arrow = { version = "55.1.1", features = [] }
arrow-flight = { version = "55.1.1", features = [] }
arrow-ipc = { version = "55.1.1", features = [] }
polars = { version = "0.49.1", features = ["rolling_window", "ewma", "abs", "rank", "cov"] }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
bytes = { version = "1", default-features = false }
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1"}
tonic = { version = "0.12.3" }
prost = { version = "0.13.5" }
sterunets = { version = "0.1.0" }

[build-dependencies]
tonic-build = { version = "0.12.3" }

[dev-dependencies]
rand = { version = "0.8" }
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1.6.0", features = [] }
hyper-util = { version = "0.1.14" }
http-body-util = "0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lints.clippy]
redundant_field_names = "allow"
