[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "data_frame_service"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.maturin]
features = ["python-exp"]
